Blender 2.80 crashes when adding keyframe to Fac in compositing node editor #61689

Closed
opened 2019-02-19 00:08:18 +01:00 by Haig Petrus · 7 comments

System Information
Operating system: Arch latest
Graphics card: GTX 1080 Ti x 2

Blender Version
Broken: 2.80 ecdd1864d1

Short description of error
When working with more than one node, such as Alpha Over, adding a keyframe in any of the conventional ways crashes Blender... at least on the Fac attribute (Premult seems fine). This is true whether the node is connected, or not.

Exact steps for others to reproduce the error

  1. Open Compositor Node Editor
  2. Add any input node (Image Node is as good as any)
  3. Add an Alpha Over node and insert keyframe to the Fac attr (should be fine)
  4. Add another Alpha Over node (or duplicate existing one); insert keyframe
  5. CRASH!!!

Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system: Arch latest Graphics card: GTX 1080 Ti x 2 **Blender Version** Broken: 2.80 ecdd1864d162 **Short description of error** When working with more than one node, such as Alpha Over, adding a keyframe in any of the conventional ways crashes Blender... at least on the Fac attribute (Premult seems fine). This is true whether the node is connected, or not. **Exact steps for others to reproduce the error** 1) Open Compositor Node Editor 2) Add any input node (Image Node is as good as any) 3) Add an Alpha Over node and insert keyframe to the Fac attr (should be fine) 4) Add another Alpha Over node (or duplicate existing one); insert keyframe 5) CRASH!!! Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @HaigPetrus

Added subscriber: @HaigPetrus

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can't reproduce this on my end.

Could you upload a simple .blend file where I can just open it and insert a keyframe and it should crash?
Just to double check that I'm not missing something.

I can't reproduce this on my end. Could you upload a simple .blend file where I can just open it and insert a keyframe and it should crash? Just to double check that I'm not missing something.
Author

Sure. It would appear as though it occurs with Image Sequences, in particular. I've included a packed .blend file with a simple node set-up to demo the crash. Just change one or all of the Image nodes to Image Sequence and add a keyframe to Fac on the third Alpha Over node. It'll crash.BL-2.80_compositorFacCrash.blend

Sure. It would appear as though it occurs with Image Sequences, in particular. I've included a packed .blend file with a simple node set-up to demo the crash. Just change one or all of the Image nodes to Image Sequence and add a keyframe to Fac on the third Alpha Over node. It'll crash.[BL-2.80_compositorFacCrash.blend](https://archive.blender.org/developer/F6661417/BL-2.80_compositorFacCrash.blend)
Sergey Sharybin was assigned by Sebastian Parborg 2019-02-19 19:30:32 +01:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555556bbeba8 in DEG::Depsgraph::check_nodes_connected (this=0x7fffe4fbcb08, from=0x0, to=0x7fffcd67df08, description=0x555557d1e438 "Animation -> Prop")
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph.cc:211
211		for (Relation *rel : from->outlinks) {
(gdb) bt
#0  0x0000555556bbeba8 in DEG::Depsgraph::check_nodes_connected (this=0x7fffe4fbcb08, from=0x0, to=0x7fffcd67df08,
    description=0x555557d1e438 "Animation -> Prop") at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph.cc:211
#1  0x0000555556bbef5d in DEG::Depsgraph::add_new_relation (this=<optimized out>, from=from@entry=0x0, to=to@entry=0x7fffcd67df08,
    description=description@entry=0x555557d1e438 "Animation -> Prop", flags=flags@entry=32)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph.cc:183
#2  0x0000555556bcc094 in DEG::DepsgraphRelationBuilder::build_animdata_curves_targets (this=this@entry=0x7fffffffd9d0, id=id@entry=0x7fffcf14c408,
    adt_key=..., operation_from=operation_from@entry=0x0, curves=<optimized out>)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:1287
#3  0x0000555556bcd323 in DEG::DepsgraphRelationBuilder::build_animdata_curves (this=this@entry=0x7fffffffd9d0, id=id@entry=0x7fffcf14c408)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:1240
#4  0x0000555556bcdd0c in DEG::DepsgraphRelationBuilder::build_animdata (this=this@entry=0x7fffffffd9d0, id=id@entry=0x7fffcf14c408)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:1206
#5  0x0000555556bce528 in DEG::DepsgraphRelationBuilder::build_nodetree (this=this@entry=0x7fffffffd9d0, ntree=0x7fffcf14c408)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:2323
#6  0x0000555556bd05bc in DEG::DepsgraphRelationBuilder::build_compositor (this=this@entry=0x7fffffffd9d0, scene=scene@entry=0x7fffcf323008)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:2427
#7  0x0000555556bd3a12 in DEG::DepsgraphRelationBuilder::build_view_layer (this=this@entry=0x7fffffffd9d0, scene=scene@entry=0x7fffcf323008,
    view_layer=view_layer@entry=0x7fffccf88908)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations_view_layer.cc:114
#8  0x0000555556bbf360 in DEG_graph_build_from_view_layer (graph=0x7fffe4fbcb08, bmain=0x7fffcf6eaa08, scene=0x7fffcf323008, view_layer=0x7fffccf88908)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_build.cc:264
#9  0x000055555696b9d1 in BKE_scene_graph_update_tagged (depsgraph=depsgraph@entry=0x7fffe4fbcb08, bmain=bmain@entry=0x7fffcf6eaa08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:1487
#10 0x000055555610e478 in wm_event_do_depsgraph (C=C@entry=0x7fffea058108)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:341
#11 0x000055555610e515 in wm_event_do_refresh_wm_and_depsgraph (C=C@entry=0x7fffea058108)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:366
#12 0x0000555556114d5a in wm_event_do_notifiers (C=C@entry=0x7fffea058108)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:524
- 13 0x000055555610ad88 in WM_main (C=0x7fffea058108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:421
- 14 0x00005555560f58e3 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555556bbeba8 in DEG::Depsgraph::check_nodes_connected (this=0x7fffe4fbcb08, from=0x0, to=0x7fffcd67df08, description=0x555557d1e438 "Animation -> Prop") at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph.cc:211 211 for (Relation *rel : from->outlinks) { (gdb) bt #0 0x0000555556bbeba8 in DEG::Depsgraph::check_nodes_connected (this=0x7fffe4fbcb08, from=0x0, to=0x7fffcd67df08, description=0x555557d1e438 "Animation -> Prop") at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph.cc:211 #1 0x0000555556bbef5d in DEG::Depsgraph::add_new_relation (this=<optimized out>, from=from@entry=0x0, to=to@entry=0x7fffcd67df08, description=description@entry=0x555557d1e438 "Animation -> Prop", flags=flags@entry=32) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph.cc:183 #2 0x0000555556bcc094 in DEG::DepsgraphRelationBuilder::build_animdata_curves_targets (this=this@entry=0x7fffffffd9d0, id=id@entry=0x7fffcf14c408, adt_key=..., operation_from=operation_from@entry=0x0, curves=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:1287 #3 0x0000555556bcd323 in DEG::DepsgraphRelationBuilder::build_animdata_curves (this=this@entry=0x7fffffffd9d0, id=id@entry=0x7fffcf14c408) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:1240 #4 0x0000555556bcdd0c in DEG::DepsgraphRelationBuilder::build_animdata (this=this@entry=0x7fffffffd9d0, id=id@entry=0x7fffcf14c408) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:1206 #5 0x0000555556bce528 in DEG::DepsgraphRelationBuilder::build_nodetree (this=this@entry=0x7fffffffd9d0, ntree=0x7fffcf14c408) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:2323 #6 0x0000555556bd05bc in DEG::DepsgraphRelationBuilder::build_compositor (this=this@entry=0x7fffffffd9d0, scene=scene@entry=0x7fffcf323008) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:2427 #7 0x0000555556bd3a12 in DEG::DepsgraphRelationBuilder::build_view_layer (this=this@entry=0x7fffffffd9d0, scene=scene@entry=0x7fffcf323008, view_layer=view_layer@entry=0x7fffccf88908) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/builder/deg_builder_relations_view_layer.cc:114 #8 0x0000555556bbf360 in DEG_graph_build_from_view_layer (graph=0x7fffe4fbcb08, bmain=0x7fffcf6eaa08, scene=0x7fffcf323008, view_layer=0x7fffccf88908) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_build.cc:264 #9 0x000055555696b9d1 in BKE_scene_graph_update_tagged (depsgraph=depsgraph@entry=0x7fffe4fbcb08, bmain=bmain@entry=0x7fffcf6eaa08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:1487 #10 0x000055555610e478 in wm_event_do_depsgraph (C=C@entry=0x7fffea058108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:341 #11 0x000055555610e515 in wm_event_do_refresh_wm_and_depsgraph (C=C@entry=0x7fffea058108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:366 #12 0x0000555556114d5a in wm_event_do_notifiers (C=C@entry=0x7fffea058108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:524 - 13 0x000055555610ad88 in WM_main (C=0x7fffea058108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:421 - 14 0x00005555560f58e3 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505 ```

This issue was referenced by e6bdc950d2

This issue was referenced by e6bdc950d25ca9f57effaebe0d4505038901a610

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61689
No description provided.