Fix T61689: Crash when having image and regular animation

Was caused by ambiguity in entry/exit operation for animation channel.
Made those explicit now,