source/blender/depsgraph/intern/node/deg_node_operation.cc
@@ -43,7 +43,9 @@ const char *operationCodeAsString(OperationCode opcode)
 		case OperationCode::ID_PROPERTY: return "ID_PROPERTY";
 		case OperationCode::PARAMETERS_EVAL: return "PARAMETERS_EVAL";
 		/* Animation, Drivers, etc. */
-		case OperationCode::ANIMATION: return "ANIMATION";
+		case OperationCode::ANIMATION_ENTRY: return "ANIMATION_ENTRY";
+		case OperationCode::ANIMATION_EVAL: return "ANIMATION_EVAL";
+		case OperationCode::ANIMATION_EXIT: return "ANIMATION_EXIT";
 		case OperationCode::DRIVER: return "DRIVER";
 		/* Scene related. */
 		case OperationCode::SCENE_EVAL: return "SCENE_EVAL";
